# ML_calories_burned

./: README.md  main.py  pyproject.toml
scripts/: eda.ipynb  initial_ml.ipynb
src/model_development/: data_prep.py  model_training.py
